--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
-    "password-validator": "^5.1.0"
+    "password-validator": "^5.1.0",
+    "sequelize": "^6.3.5"
   }
 }
