--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@angular/cli": "^10.1.0",
     "@vue/cli": "^4.5.4",
+    "axios": "^0.20.0",
     "sass": "^1.26.10",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-axios": "^2.1.5"
   }
 }
