--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
   "main": "babel.config.js",
   "dependencies": {
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-router": "^3.4.5",
     "vuex": "^3.4.0"
   },
